[gd_scene load_steps=4 format=3 uid="uid://bddre0grxtsad"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_53r24"]
[ext_resource type="Texture2D" uid="uid://b4gyggdsqcqj1" path="res://resources/graphics/player/player.png" id="2_o6klu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8kqn2"]
radius = 62.0081

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_53r24")

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(48, 8)
rotation = 1.51844
texture = ExtResource("2_o6klu")

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2(10, 9)
shape = SubResource("CircleShape2D_8kqn2")

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="BulletMarkers" type="Node2D" parent="."]

[node name="Marker1" type="Marker2D" parent="BulletMarkers"]
position = Vector2(141, 11)

[node name="Marker2" type="Marker2D" parent="BulletMarkers"]
position = Vector2(141, 18)

[node name="Marker3" type="Marker2D" parent="BulletMarkers"]
position = Vector2(141, 25)

[node name="Marker4" type="Marker2D" parent="BulletMarkers"]
position = Vector2(141, 33)

[node name="PlayerCamera" type="Camera2D" parent="."]

[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
